--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <strong>Hindi Poetry GPT:</strong>
                             Hindi Poetry GPT is a groundbreaking project that leverages the capabilities of a Generative Pre-trained Transformer (GPT) to create original Hindi poetry. By training the model on a diverse and rich dataset of Hindi poetic literature, the project aspires to generate creative, evocative, and culturally resonant poetry that reflects the beauty and depth of the Hindi language. 
                             <br>
-                            <a href="YOUR_REPO_LINK" target="_blank">View Repository</a>
+                            <a href="https://github.com/manishhnnegi/HindiPoetGPT.git" target="_blank">View Repository</a>
                         </div>
                     </li>
                     <li>
@@ -145,6 +145,16 @@
                             This project leverages a Syemis neural network architecture to accurately identify and verify individuals based on their facial features. By training the model on a diverse dataset of images, it learns to extract unique facial characteristics and achieve high accuracy in recognition tasks. The system showcases the effectiveness of deep learning techniques in real-world applications, such as security and user authentication.
                         <br>
                             <a href="YOUR_REPO_LINK" target="_blank">View Repository</a>
+                        </div>
+                    </li>
+                 
+                    <li>
+                        <img src="images/trans.png" alt="micrograd" class="project-image">
+                        <div class="project-description">
+                            <strong>TranslatorTranFormer:</strong>
+                            TranslatorTranFormer is English to Hindi language translator devlop to show the capabilities of Transformer architecture for language translation. 
+                            <br>
+                            <a href="https://github.com/manishhnnegi/HindiPoetGPT.git" target="_blank">View Repository</a>
                         </div>
                     </li>
            
