--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <strong>Face Recognition System:</strong>
                             This project leverages a Syemis neural network architecture to accurately identify and verify individuals based on their facial features. By training the model on a diverse dataset of images, it learns to extract unique facial characteristics and achieve high accuracy in recognition tasks. The system showcases the effectiveness of deep learning techniques in real-world applications, such as security and user authentication.
                         <br>
-                            <a href="YOUR_REPO_LINK" target="_blank">View Repository</a>
+                            <a href="https://github.com/manishhnnegi/Face-Recognition-Web-App-using-One-Shot-Learning-with-Siamese-Networks.git" target="_blank">View Repository</a>
                         </div>
                     </li>
                  
@@ -152,9 +152,8 @@
                         <img src="images/trans.png" alt="micrograd" class="project-image">
                         <div class="project-description">
                             <strong>TranslatorTranFormer:</strong>
-                            TranslatorTranFormer is English to Hindi language translator devlop to show the capabilities of Transformer architecture for language translation. 
-                            <br>
-                            <a href="https://github.com/manishhnnegi/HindiPoetGPT.git" target="_blank">View Repository</a>
+                            TranslatorTranFormer is an English-to-Hindi language translator developed to showcase the effectiveness of the Transformer architecture for machine translation. The project highlights the power of deep learning in handling complex language structures, providing accurate and context-aware translations. It serves as a practical demonstration of Transformer-based models in bridging linguistic gaps.<br>
+                            <a href="https://github.com/manishhnnegi/TranslatorTransFormer.git" target="_blank">View Repository</a>
                         </div>
                     </li>
            
