--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li class="timeline-item">
                 <div class="year-logo">
                     <div class="left-section">
-                        <img src="images/cm2.png" alt="Deevia Software" class="logo">
+                        <img src="images/com.png" alt="Deevia Software" class="logo">
                         <div class="year">2022 - Present</div>
                     </div>
                     <div class="content">
