--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h2>About Me</h2>
                 <p>
                     I am passionate about creating solutions with AI, focusing on neural networks, deep learning, and computer vision. 
-                    I have been involved in multiple projects ranging from AI research to building real-world applications.
+                    I have been involved in multiple projects related to AI.
                 </p>
         <!-- Timeline Section -->
         <!-- <h3>Professional Timeline</h3> -->
@@ -71,7 +71,7 @@
                         <img src="images/ac2.png" alt="micrograd" class="project-image">
                         <div class="project-description">
                             <strong>Multilingual Voice-Controlled Smart AC System for LG:</strong>
-                            This project enables the control of LG air conditioners using voice commands in multiple languages, enhancing user convenience with the ability to interact in both English and Hindi. The system leverages AI-driven voice recognition for seamless operation, providing an intuitive and multilingual solution for smart home climate control.
+                            This project enables the control of LG air conditioners using voice commands in multiple languages(English/Hindi/korean), enhancing user convenience with the ability to interact in English, Korean and Hindi. The system leverages AI-driven voice recognition as well as Intent and slot filling for seamless keyword extraction & operation, providing an intuitive and multilingual solution for smart home climate control.
                             <br>
                             </div>
                     </li>
@@ -130,7 +130,7 @@
                         <img src="images/kavi.png" alt="micrograd" class="project-image">
                         <div class="project-description">
                             <strong>Hindi Poetry GPT:</strong>
-                            Hindi Poetry GPT is a groundbreaking project that leverages the capabilities of a Generative Pre-trained Transformer (GPT) to create original Hindi poetry. By training the model on a diverse and rich dataset of Hindi poetic literature, the project aspires to generate creative, evocative, and culturally resonant poetry that reflects the beauty and depth of the Hindi language. 
+                            Hindi Poetry GPT is a prototype project that leverages the capabilities of a Generative Pre-trained Transformer (GPT) to create original Hindi poetry. By training the model on a dataset of Hindi poetic literature, the project aspires to generate creative, evocative, and culturally resonant poetry that reflects the beauty and depth of the Hindi language. 
                             <br>
                             <a href="https://github.com/manishhnnegi/HindiPoetGPT.git" target="_blank">View Repository</a>
                         </div>
@@ -139,7 +139,7 @@
                         <img src="images/face.png" alt="micrograd" class="project-image">
                         <div class="project-description">
                             <strong>Face Recognition System:</strong>
-                            This project leverages a Syemis neural network architecture to accurately identify and verify individuals based on their facial features. By training the model on a diverse dataset of images, it learns to extract unique facial characteristics and achieve high accuracy in recognition tasks. The system showcases the effectiveness of deep learning techniques in real-world applications, such as security and user authentication.
+                            This prototype project leverages a Syemis neural network architecture to accurately identify and verify individuals based on their facial features. The system showcases the effectiveness of deep learning techniques in real-world applications, such as security and user authentication.
                         <br>
                             <a href="https://github.com/manishhnnegi/Face-Recognition-Web-App-using-One-Shot-Learning-with-Siamese-Networks.git" target="_blank">View Repository</a>
                         </div>
@@ -197,6 +197,21 @@
             <div class="container">
                 <h2>Medium Blog Posts</h2>
                 <div class="blog-grid">
+                    <div class="blog-card">
+                        <h4>ToolLLM — Empowering LLMs for Advanced Tool Use!</h4>
+                        <p>Read about the tool use fuctionality in agents.</p>
+                        <a href="https://medium.com/@manishnegi101/toolllm-empowering-llms-for-advanced-tool-use-58ac65fbb5e9">Read More</a>
+                    </div>
+                    <div class="blog-card">
+                        <h4>Whisper for ASR: All You Need to Know!</h4>
+                        <p>Read about the Whisper an ASR model and its wonders.</p>
+                        <a href="https://medium.com/@manishnegi101/whisper-for-asr-all-you-need-to-know-ed0d7853ebb8">Read More</a>
+                    </div>
+                    <div class="blog-card">
+                        <h4>Self-Attention in Transformers: A Deep Dive</h4>
+                        <p>Read about self-attention, the backbone of transformer architecture</p>
+                        <a href="https://medium.com/@manishnegi101/self-attention-in-transformers-a-deep-dive-ec1d7eadc390">Read More</a>
+                    </div>
                     <div class="blog-card">
                         <h4>Face Recognition System</h4>
                         <p>Read about complete building process system to identify person by his face.</p>
