add these files

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                     <li>
                         <img src="images/ac2.png" alt="micrograd" class="project-image">
                         <div class="project-description">
-                            <strong>Multilingual Voice-Controlled Smart AC System for LG:</strong>
+                            <strong>[ASR+NLP]</strong><strong>Multilingual Voice-Controlled Smart AC System for
+                                LG:</strong>
                             This project enables the control of LG air conditioners using voice commands in multiple
                             languages(English/Hindi/korean), enhancing user convenience with the ability to interact in
                             English, Korean and Hindi. The system leverages AI-driven voice recognition as well as
@@ -91,7 +92,7 @@
                     <li>
                         <img src="images/aa.png" alt="micrograd" class="project-image">
                         <div class="project-description">
-                            <strong>Autonomus Home Agent:</strong>
+                            <strong>[Gen AI]</strong><strong>Autonomus Home Agent:</strong>
                             This project focuses on developing an autonomous agent for home environments, designed to
                             perform tasks such as monitoring, controlling, and optimizing household functions.
                             Leveraging artificial intelligence and machine learning, the agent can learn from its
@@ -105,7 +106,8 @@
                     <li>
                         <img src="images/vv.png" alt="micrograd" class="project-image">
                         <div class="project-description">
-                            <strong>Airbase Runway Visibility Forecasting system for Indian Air Force:</strong>
+                            <strong>[Time Series]</strong><strong>Airbase Runway Visibility Forecasting system for
+                                Indian Air Force:</strong>
                             This project focused on developing and deploying multivariate time series deep learning
                             models to forecast runway visibility at Indian Air Force airbases for multiple future time
                             horizons. Leveraging historical meteorological data such as temperature, humidity, wind
@@ -118,7 +120,7 @@
                     <li>
                         <img src="images/face.png" alt="micrograd" class="project-image">
                         <div class="project-description">
-                            <strong>Face Recognition System:</strong>
+                            <strong>[CV]</strong><strong>Face Recognition System:</strong>
                             This project leverages a Syemis neural network architecture to accurately identify and
                             verify individuals based on their facial features. By training the model on a diverse
                             dataset of images, it learns to extract unique facial characteristics and achieve high
@@ -130,7 +132,7 @@
                     <li>
                         <img src="images/rr2.png" alt="micrograd" class="project-image">
                         <div class="project-description">
-                            <strong>Automated Resume Screening Tool for Recruiters:</strong>
+                            <strong>[NLP]</strong><strong>Automated Resume Screening Tool for Recruiters:</strong>
                             This project involved the development of an automated resume screening tool to streamline
                             the recruitment process. By leveraging natural language processing (NLP) techniques, the
                             tool efficiently extracts relevant skills and experience from resumes and matches them with
@@ -152,7 +154,7 @@
                     <li>
                         <img src="images/chat.png" alt="micrograd" class="project-image">
                         <div class="project-description">
-                            <strong>SmartBuddy(Smart Assistant Agent Bot):</strong>
+                            <strong>[Gen AI]</strong><strong>SmartBuddy(Smart Assistant Agent Bot):</strong>
                             is a Personal Assistant Chatbot designed to assist users with various tasks based on their
                             instructions. It can access external APIs to provide real-time information and demonstrates
                             tool-use capabilities for enhanced functionality, including interaction with LLMs (Large
@@ -163,7 +165,7 @@
                     <li>
                         <img src="images/kavi.png" alt="micrograd" class="project-image">
                         <div class="project-description">
-                            <strong>Hindi Poetry GPT:</strong>
+                            <strong>[NLP]</strong><strong>Hindi Poetry GPT:</strong>
                             Hindi Poetry GPT is a prototype project that leverages the capabilities of a Generative
                             Pre-trained Transformer (GPT) to create original Hindi poetry. By training the model on a
                             dataset of Hindi poetic literature, the project aspires to generate creative, evocative, and
@@ -176,7 +178,7 @@
                     <li>
                         <img src="images/face.png" alt="micrograd" class="project-image">
                         <div class="project-description">
-                            <strong>Face Recognition System:</strong>
+                            <strong>[CV]</strong><strong>Face Recognition System:</strong>
                             This prototype project leverages a Syemis neural network architecture to accurately identify
                             and verify individuals based on their facial features. The system showcases the
                             effectiveness of deep learning techniques in real-world applications, such as security and
@@ -190,7 +192,7 @@
                     <li>
                         <img src="images/trans.png" alt="micrograd" class="project-image">
                         <div class="project-description">
-                            <strong>TranslatorTranFormer:</strong>
+                            <strong>[NLP]</strong><strong>TranslatorTranFormer:</strong>
                             TranslatorTranFormer is an English-to-Hindi language translator developed to showcase the
                             effectiveness of the Transformer architecture for machine translation. The project
                             highlights the power of deep learning in handling complex language structures, providing
